// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PokemonPage Pages debe de hacer match con el snapshop cuando cargen los pokemons 1`] = `
<div>
  <h1>¿Quien es este pokemon?</h1>
  <pokemon-picture-stub pokemonid="1" showpokemon="false"></pokemon-picture-stub>
  <pokemon-options-stub pokemons="[object Object],[object Object],[object Object],[object Object]"></pokemon-options-stub>
  <!--v-if-->
</div>
`;

exports[`PokemonPage Pages debe de hacer match con el snapshop cuando responda 1`] = `
<div>
  <h1>¿Quien es este pokemon?</h1>
  <pokemon-picture-stub pokemonid="1" showpokemon="true"></pokemon-picture-stub>
  <pokemon-options-stub pokemons="[object Object],[object Object],[object Object],[object Object]"></pokemon-options-stub>
  <h2 class="fade-in">Correcto, bulbasaur</h2><button>Iniciar de nuevo</button>
</div>
`;
